--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 <body data-spy="scroll" data-target="#navbar-example">
 
 
