--- a/index.html
+++ b/index.html
@@ -86,20 +86,6 @@
   </div>
 </body>
 
-<script>
-  // SMOOTH SCROLLING SECTIONS
-$('a[href*=#]:not([href=#])').click(function() {
-    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') 
-        || location.hostname == this.hostname) {
+<script src="script.js">
 
-        var target = $(this.hash);
-        target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-           if (target.length) {
-             $('html,body').animate({
-                 scrollTop: target.offset().top
-            }, 1000);
-            return false;
-        }
-    }
-});
 </script>
