--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
+<html>
+<head>
 <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
+</head>
+
 <body data-spy="scroll" data-target="#navbar-example">
 
 
@@ -89,3 +93,4 @@
 <script src="script.js">
 
 </script>
+</html>
