--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700">
-  
-
 <style>
 .wrapper {
   min-height: 100vh;
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
   font-weight: 300;
   color: #fff;
-  position: relative; 
+  position: relative;
 }
 
 section {
@@ -20,11 +18,10 @@ section {
   font-size: 30px;
   font-weight: 80;
   background-color: #22A7F0;
-
   display: flex;
   justify-content: center;
   align-items: center;
-
+}
 section:nth-child(1) {
   background: white;
 }
@@ -46,136 +43,117 @@ section:nth-child(6) {
 section:nth-child(7) {
   background: #E9BBB5;
 }
+
+.nav__wrapper {
+  position: fixed;
+  height: 100%;
+  padding: 30px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-end;
 }
 .nav {
-  &__wrapper {
-    position: fixed;
-    height: 100%;
-    padding: 30px;
-
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-end;
-  }
-
-  & {
-    margin: 0 0 100px 30px; 
-  }
-  &__counter {
-    font-size: 24px;
-    transition: all 0.15s ease-out;
-  }
-  &__title {
-    font-size: 32px;
-    font-weight: 500;
-    margin: 0 0 0.25em;
-    width: 300px;
-    height: 0;
-    overflow: hidden;
-    opacity: 0;
-    transition: height 0.3s ease-out, opacity 0.2s ease-out;
-  }
-  &__body {
-    font-weight: 370;
-    font-size: 30px;
-    font-size: 20px;
-    width: 400px;
-    height: 0;
-    overflow: hidden;
-    opacity: 0;
-    transition: height 0.3s ease-out, opacity 0.2s ease-out;
-  }
-  &__footer {
-    font-weight: 200;
-    font-size: 30px;
-    font-size: 30px;
-    width: 400px;
-    height: 0;
-    overflow: hidden;
-    opacity: 0;
-    transition: height 0.3s ease-out, opacity 0.2s ease-out;
-  }
-  li {
-    position: relative;
-    transition: all 0.3s ease-out;
-    margin-bottom: 1em;
-
-    &:after {
-      content: '';
-      display: block;
-      border-left: 2px solid white;
-      border-top: 2px solid white;
-      height: 250px;
-      width: 20px;
-      position: absolute;
-      left: -30px;
-      top: 15px;
-    }
-
-    a {
-      display: block;
-      padding: 0;
-      color: #205566;
-      transition: all 0.15s ease-out;
-
-      &:hover {
-        background-color: transparent;
-        padding-left: 1em
-      }
-      &:focus {
-        background-color: transparent;
-      }
-    }
-
-    &.active {
-      pointer-events: none;
-      padding-left: 1em;
-
-      &:after {
-        width: 35px;
-        height: 400px;
-        top: 35px;
-      }
-
-      .nav__counter {
-        font-size: 48px;
-      }
-      .nav__title {
-        height: 40px;
-        opacity: 1;
-        overflow: visible;
-      }
-      .nav__body {
-        height: 100px;
-        opacity: 1;
-        overflow: visible;
-      }
-    }
-
-  }
-
+  margin: 0 0 100px 30px;
 }
+.nav__counter {
+  font-size: 24px;
+  transition: all 0.15s ease-out;
+}
+.nav__title {
+  font-size: 32px;
+  font-weight: 500;
+  margin: 0 0 0.25em;
+  width: 300px;
+  height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: height 0.3s ease-out, opacity 0.2s ease-out;
+}
+.nav__body {
+  font-weight: 370;
+  font-size: 30px;
+  font-size: 20px;
+  width: 400px;
+  height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: height 0.3s ease-out, opacity 0.2s ease-out;
+}
+.nav__footer {
+  font-weight: 200;
+  font-size: 30px;
+  font-size: 30px;
+  width: 400px;
+  height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: height 0.3s ease-out, opacity 0.2s ease-out;
+}
+.nav li {
+  position: relative;
+  transition: all 0.3s ease-out;
+  margin-bottom: 1em;
+}
+.nav li:after {
+  content: "";
+  display: block;
+  border-left: 2px solid white;
+  border-top: 2px solid white;
+  height: 250px;
+  width: 20px;
+  position: absolute;
+  left: -30px;
+  top: 15px;
+}
+.nav li a {
+  display: block;
+  padding: 0;
+  color: #205566;
+  transition: all 0.15s ease-out;
+}
+.nav li a:hover {
+  background-color: transparent;
+  padding-left: 1em;
+}
+.nav li a:focus {
+  background-color: transparent;
+}
+.nav li.active {
+  pointer-events: none;
+  padding-left: 1em;
+}
+.nav li.active:after {
+  width: 35px;
+  height: 400px;
+  top: 35px;
+}
+.nav li.active .nav__counter {
+  font-size: 48px;
+}
+.nav li.active .nav__title {
+  height: 40px;
+  opacity: 1;
+  overflow: visible;
+}
+.nav li.active .nav__body {
+  height: 100px;
+  opacity: 1;
+  overflow: visible;
+}
+
 img {
-position: fixed ;
+  position: fixed;
   left: 700px;
   top: 515px;
   z-index: 1;
-  width:50%;
+  width: 50%;
 }
 </style>
-  
-<script>
-  window.console = window.console || function(t) {};
-</script>
-<script>
-  if (document.location.search.match(/type=embed/gi)) {
-    window.parent.postMessage("resize", "*");
-  }
-</script>
-
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example">
+
+
   <div class="wrapper" >
 
     <nav class="nav__wrapper" id="navbar-example">
@@ -258,6 +236,16 @@ position: fixed ;
 
 
   </div>
+</body>
+<script>
+  window.console = window.console || function(t) {};
+</script>
+<script>
+  if (document.location.search.match(/type=embed/gi)) {
+    window.parent.postMessage("resize", "*");
+  }
+</script>
+  
 <div id="popup-overlay" class="overlay popup-overlay"></div>
 <div id="modal-overlay" class="overlay modal-overlay"></div>
 <script src="https://cpwebassets.codepen.io/assets/common/everypage-b61528ae2ce1c44a980ce1895a316ea4da923be416a7deb9e5de27b6f8de81e1.js"></script>
@@ -289,8 +277,5 @@ $('a[href*=#]:not([href=#])').click(function() {
 <script src="https://cpwebassets.codepen.io/assets/packs/js/everypage-d1402a1ff405704fa7ac.js"></script>
 <div id="react-popups"></div>
 <script src="https://cpwebassets.codepen.io/assets/editor/full/full_page_renderer-68d817ddab07bc9760b7fbc5f2d6796c23ed348c67db2aeb96ecee1dadf9e71d.js"></script>
-
-</body>
-  
 
 </html>
