--- a/index.html
+++ b/index.html
@@ -149,6 +149,15 @@ img {
   width: 50%;
 }
 </style>
+  <script>
+  window.console = window.console || function(t) {};
+</script>
+<script>
+  if (document.location.search.match(/type=embed/gi)) {
+    window.parent.postMessage("resize", "*");
+  }
+</script>
+
 </head>
 <body data-spy="scroll" data-target="#navbar-example">
 
@@ -232,10 +241,10 @@ img {
     <section class="section section6" id="section6">
 <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fthongtinchinhphu%2Fvideos%2F697171947719595%2F&show_text=false&width=560" width="65%" height="65%" style="border:none;overflow:hidden" scrolling="no" frameborder="1" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
     </section>
-
-
   </div>
-  
+  <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script id="rendered-js">
 // SMOOTH SCROLLING SECTIONS
 $('a[href*=#]:not([href=#])').click(function() {
@@ -254,23 +263,16 @@ $('a[href*=#]:not([href=#])').click(function() {
 });
 </script>  
 </body>
-<script>
-  window.console = window.console || function(t) {};
-</script>
-<script>
-  if (document.location.search.match(/type=embed/gi)) {
-    window.parent.postMessage("resize", "*");
-  }
-</script>
 <script src="https://cpwebassets.codepen.io/assets/common/everypage-b61528ae2ce1c44a980ce1895a316ea4da923be416a7deb9e5de27b6f8de81e1.js"></script>
 <script src="https://fast.appcues.com/69186.js"></script>
 <script src="https://cpwebassets.codepen.io/assets/common/analytics_and_notifications-afa6925cbcff840929f2b7c543587d5f9d7a461af81ee7ca80631c8e37ac42f2.js"></script>
-<script nonce="">
+<script nonce>
 LUX=(function(){var a=("undefined"!==typeof(LUX)&&"undefined"!==typeof(LUX.gaMarks)?LUX.gaMarks:[]);var d=("undefined"!==typeof(LUX)&&"undefined"!==typeof(LUX.gaMeasures)?LUX.gaMeasures:[]);var j="LUX_start";var k=window.performance;var l=("undefined"!==typeof(LUX)&&LUX.ns?LUX.ns:(Date.now?Date.now():+(new Date())));if(k&&k.timing&&k.timing.navigationStart){l=k.timing.navigationStart}function f(){if(k&&k.now){return k.now()}var o=Date.now?Date.now():+(new Date());return o-l}function b(n){if(k){if(k.mark){return k.mark(n)}else{if(k.webkitMark){return k.webkitMark(n)}}}a.push({name:n,entryType:"mark",startTime:f(),duration:0});return}function m(p,t,n){if("undefined"===typeof(t)&&h(j)){t=j}if(k){if(k.measure){if(t){if(n){return k.measure(p,t,n)}else{return k.measure(p,t)}}else{return k.measure(p)}}else{if(k.webkitMeasure){return k.webkitMeasure(p,t,n)}}}var r=0,o=f();if(t){var s=h(t);if(s){r=s.startTime}else{if(k&&k.timing&&k.timing[t]){r=k.timing[t]-k.timing.navigationStart}else{return}}}if(n){var q=h(n);if(q){o=q.startTime}else{if(k&&k.timing&&k.timing[n]){o=k.timing[n]-k.timing.navigationStart}else{return}}}d.push({name:p,entryType:"measure",startTime:r,duration:(o-r)});return}function h(n){return c(n,g())}function c(p,o){for(i=o.length-1;i>=0;i--){var n=o[i];if(p===n.name){return n}}return undefined}function g(){if(k){if(k.getEntriesByType){return k.getEntriesByType("mark")}else{if(k.webkitGetEntriesByType){return k.webkitGetEntriesByType("mark")}}}return a}return{mark:b,measure:m,gaMarks:a,gaMeasures:d}})();LUX.ns=(Date.now?Date.now():+(new Date()));LUX.ac=[];LUX.cmd=function(a){LUX.ac.push(a)};LUX.init=function(){LUX.cmd(["init"])};LUX.send=function(){LUX.cmd(["send"])};LUX.addData=function(a,b){LUX.cmd(["addData",a,b])};LUX_ae=[];window.addEventListener("error",function(a){LUX_ae.push(a)});LUX_al=[];if("function"===typeof(PerformanceObserver)&&"function"===typeof(PerformanceLongTaskTiming)){var LongTaskObserver=new PerformanceObserver(function(c){var b=c.getEntries();for(var a=0;a<b.length;a++){var d=b[a];LUX_al.push(d)}});try{LongTaskObserver.observe({type:["longtask"]})}catch(e){}};
 </script>
-
 <script src="https://cdn.speedcurve.com/js/lux.js?id=410041" async="" defer="" crossorigin="anonymous"></script>
-
-
+<script src="https://cpwebassets.codepen.io/assets/packs/js/vendor-d85c4aa4130cbf5c6801.chunk.js"></script>
+<script src="https://cpwebassets.codepen.io/assets/packs/js/2-56b9048a92715122b7fc.chunk.js"></script>
+<script src="https://cpwebassets.codepen.io/assets/packs/js/everypage-d1402a1ff405704fa7ac.js"></script>
+<script src="https://cpwebassets.codepen.io/assets/editor/full/full_page_renderer-68d817ddab07bc9760b7fbc5f2d6796c23ed348c67db2aeb96ecee1dadf9e71d.js"></script>
 </div>
 </html>
