--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ section:nth-child(1) {
 }
 section:nth-child(2) {
   background: #E7CBA9;
+  background-image:url('https://lh3.googleusercontent.com/bnq9meaBKEYgbUFk4iCbUh0sRgDzp0EXxxVRW3q8BtQx7VgPcZlwgtkxh9cQtMu0YAg9KeGPlb7qezyThl0JxwOWox5nCD6Y-5vDY5zbum3iMZet-5iJyh-4CO-amf9ePbGPUiqP0A=w600-h315-p-k')
 }
 section:nth-child(3) {
   background: #AAD9CD;
@@ -219,7 +220,6 @@ img {
 
     <section class="section section1" id="section1">
       I am a story-teller of people & nature
-     <a> <img src="https://lh3.googleusercontent.com/bnq9meaBKEYgbUFk4iCbUh0sRgDzp0EXxxVRW3q8BtQx7VgPcZlwgtkxh9cQtMu0YAg9KeGPlb7qezyThl0JxwOWox5nCD6Y-5vDY5zbum3iMZet-5iJyh-4CO-amf9ePbGPUiqP0A=w600-h315-p-k" /> </a>
     </section>
 
     <section class="section section2" id="section2">
