--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ section:nth-child(1) {
 section:nth-child(2) {
   background: #E7CBA9;
   background-image:url('https://lh3.googleusercontent.com/bnq9meaBKEYgbUFk4iCbUh0sRgDzp0EXxxVRW3q8BtQx7VgPcZlwgtkxh9cQtMu0YAg9KeGPlb7qezyThl0JxwOWox5nCD6Y-5vDY5zbum3iMZet-5iJyh-4CO-amf9ePbGPUiqP0A=w600-h315-p-k')
-}
+  background-repeat: no-repeat;
+  }
 section:nth-child(3) {
   background: #AAD9CD;
 }
