--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ img {
     <nav class="nav__wrapper" id="navbar-example">
       <ul class="nav">
 
-        <li role="presentation" class="active">
+        <li role="presentation">
           <a href="#section1">
             <span class="nav__counter">01</span>
             <h3 class="nav__title">Intro</h3>
