--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ img {
           <a href="#section6">
             <span class="nav__counter">06</span>
             <h3 class="nav__title">More About Me</h3>
-            <p class="nav__body">I work as a freelance photographer, illustrator and content writer</p>
+            <p class="nav__body">Please contact: donguyetha66@gmail.com</p>
           </a>
         </li>
 
