--- a/index.html
+++ b/index.html
@@ -280,20 +280,22 @@ window.addEventListener("load", callbackFunc);
 window.addEventListener("scroll", callbackFunc);
 </script>
 <script>
-var items = document.querySelectorAll(".nav li");
- 
-// code for the isElementInViewport function
- 
-function callbackFunc() {
-  for (var i = 0; i < items.length; i++) {
-    if (isElementInViewport(items[i])) {
-      items[i].classList.add("in-view");
+function isElementInViewport (el) {
+
+    // Special bonus for those using jQuery
+    if (typeof jQuery === "function" && el instanceof jQuery) {
+        el = el[0];
     }
-  }
+
+    var rect = el.getBoundingClientRect();
+
+    return (
+        rect.top >= 0 &&
+        rect.left >= 0 &&
+        rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) && /* or $(window).height() */
+        rect.right <= (window.innerWidth || document.documentElement.clientWidth) /* or $(window).width() */
+    );
 }
- 
-window.addEventListener("load", callbackFunc);
-window.addEventListener("scroll", callbackFunc);
 </script>
 
   
