--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ $('a[href*=#]:not([href=#])').click(function() {
 });
 </script>
 <script>
-var items = document.querySelectorAll(".nav li");
+var items = document.querySelectorAll(".nav li a");
  
 // code for the isElementInViewport function
  
