--- a/index.html
+++ b/index.html
@@ -1,8 +1,61 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<link rel="stylesheet/scss" type="text/css" href="test.scss">
+<script src="//cdnjs.cloudflare.com/ajax/libs/sass.js/0.6.3/sass.min.js"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <script>
+
+
+    function read(url) {
+    var xmlhttp = new XMLHttpRequest();
+
+    xmlhttp.onreadystatechange = function(){
+            if(xmlhttp.status == 200 && xmlhttp.readyState == 4){
+            //basename = url.replace(/^.*\/|\.[^.]*$/g, '');
+            basename = url.substring(url.lastIndexOf('/')+1);
+            scssCode = xmlhttp.responseText;
+            console.log(scssCode);
+            Sass.writeFile(basename, scssCode);
+            compile('@import "' + basename + '"; ');
+        }
+
+    }
+    xmlhttp.open("GET",url,true);
+    xmlhttp.send();    
+    }    
+
+    function registerStylesheets() {
+
+                var links = document.getElementsByTagName('link');
+                sheets = [];
+
+                for (var i = 0; i < links.length; i++) {
+
+
+
+                    if (links[i].rel === 'stylesheet/scss') {
+                        sheets.push(links[i].href);
+                    }
+                }
+                return sheets;
+    };
+
+    var sheets =  registerStylesheets();
+
+    for (var i = 0; i < sheets.length; i++) { 
+    read(sheets[i]);
+    } 
+
+    function compile(scss) {
+    console.log(scss);    
+    console.log(Sass.compile(scss));
+    }
+
+    </script>   
+
+  
 <style>
 .wrapper {
   min-height: 100vh;
@@ -162,6 +215,7 @@ img {
 
 </head>
 <body data-spy="scroll" data-target="#navbar-example">
+ <div id="csscode"></div>
 
 
   <div class="wrapper" >
