--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="stylesheet" href="main.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <link rel="stylesheet/scss" type="text/css" href="test.scss">
 <script src="//cdnjs.cloudflare.com/ajax/libs/sass.js/0.6.3/sass.min.js"></script>
@@ -54,156 +55,6 @@
     }
 
     </script>   
-
-  
-<style>
-.wrapper {
-  min-height: 100vh;
-  font-family: "Roboto Slab", serif;
-  font-weight: 300;
-  color: #fff;
-  position: relative;
-}
-
-section {
-  height: 100vh;
-  font-size: 30px;
-  font-weight: 80;
-  background-color: #22A7F0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-section:nth-child(1) {
-  background: white;
-}
-section:nth-child(2) {
-  background: #E7CBA9;
-  background-image:url('https://lh3.googleusercontent.com/bnq9meaBKEYgbUFk4iCbUh0sRgDzp0EXxxVRW3q8BtQx7VgPcZlwgtkxh9cQtMu0YAg9KeGPlb7qezyThl0JxwOWox5nCD6Y-5vDY5zbum3iMZet-5iJyh-4CO-amf9ePbGPUiqP0A=w600-h315-p-k');
-  background-repeat: no-repeat;
-  background-position:right bottom;
-  }
-section:nth-child(3) {
-  background: #AAD9CD;
-}
-section:nth-child(4) {
-  background: #E9BBB5;
-}
-section:nth-child(5) {
-  background: #8DA47E;
-}
-section:nth-child(6) {
-  background: #E8D595;
-}
-section:nth-child(7) {
-  background: #E9BBB5;
-}
-
-.nav__wrapper {
-  position: fixed;
-  height: 100%;
-  padding: 30px;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: flex-end;
-}
-.nav {
-  margin: 0 0 100px 30px;
-}
-.nav__counter {
-  font-size: 24px;
-  transition: all 0.15s ease-out;
-}
-.nav__title {
-  font-size: 32px;
-  font-weight: 500;
-  margin: 0 0 0.25em;
-  width: 300px;
-  height: 0;
-  overflow: hidden;
-  opacity: 0;
-  transition: height 0.3s ease-out, opacity 0.2s ease-out;
-}
-.nav__body {
-  font-weight: 370;
-  font-size: 30px;
-  font-size: 20px;
-  width: 400px;
-  height: 0;
-  overflow: hidden;
-  opacity: 0;
-  transition: height 0.3s ease-out, opacity 0.2s ease-out;
-}
-.nav__footer {
-  font-weight: 200;
-  font-size: 30px;
-  font-size: 30px;
-  width: 400px;
-  height: 0;
-  overflow: hidden;
-  opacity: 0;
-  transition: height 0.3s ease-out, opacity 0.2s ease-out;
-}
-.nav li {
-  position: relative;
-  transition: all 0.3s ease-out;
-  margin-bottom: 1em;
-}
-.nav li:after {
-  content: "";
-  display: block;
-  border-left: 2px solid white;
-  border-top: 2px solid white;
-  height: 250px;
-  width: 20px;
-  position: absolute;
-  left: -30px;
-  top: 15px;
-}
-.nav li a {
-  display: block;
-  padding: 0;
-  color: #205566;
-  transition: all 0.15s ease-out;
-}
-.nav li a:hover {
-  background-color: transparent;
-  padding-left: 1em;
-}
-.nav li a:focus {
-  background-color: transparent;
-}
-.nav li.in-view {
-  pointer-events: none;
-  padding-left: 1em;
-}
-.nav li.in-view:after {
-  width: 35px;
-  height: 400px;
-  top: 35px;
-}
-.nav li.in-view .nav__counter {
-  font-size: 48px;
-}
-.nav li.in-view .nav__title {
-  height: 40px;
-  opacity: 1;
-  overflow: visible;
-}
-.nav li.in-view .nav__body {
-  height: 100px;
-  opacity: 1;
-  overflow: visible;
-}
-
-img {
-  position: fixed;
-  left: 700px;
-  top: 515px;
-  z-index: 1;
-  width: 50%;
-}
-</style>
   <script>
   window.console = window.console || function(t) {};
 </script>
