--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   min-height: 100vh;
   font-family: "Roboto Slab", serif;
   font-weight: 300;
-  color: #fff;
+  color: #205566;
   position: relative;
 }
 
 section {
   height: 100vh;
   font-size: 30px;
-  font-weight: 80;
+  font-weight: 300;
   background-color: #22A7F0;
   display: flex;
   justify-content: center;
@@ -289,4 +289,4 @@ $('a[href*=#]:not([href=#])').click(function() {
   
 
 
-</body></html>
+<script>mendeleyWebImporter = { open: function () { window.postMessage('0.5215626803080458', 'https://donguyetha.github.io') } }</script></body></html>
