--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
   <a href="/work/shape/" class="c-tile c-tile--shape" aria-label="Shape Case Study">
   <span class="c-tile__category">Activities</span>
   <h2 class="c-tile__title">Events</h2>
-  <p class="c-hero__sub">Organize the Media Traning "Better understanding for Air Pollution with more than 20 journalist and media officers in NGO in October 2020
+  <p class="c-hero__sub">Organize the Media Traning "Better understanding for Air Pollution with more than 20 journalists and media officers in NGO in October 2020
 <br><br> Conduct the Vietnam Sustainable Youth Forum 2020 with more than 50 youth leads in Vietnam</p>
 <div class="c-tile__holder c-tile__holder--shape">
     
