--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
   <span class="c-tile__category">Other</span>
   <h2 class="c-tile__title">About Me</h2>
   <div class="c-tile__holder">
-    <img class="c-tile__img c-tile__img--custoji lazy loaded" alt="Custoji" aria-label="Custoji image" data-ll-status="loaded" src="./Work_files/Profile.jpg">
+    <img width = "70%" class="c-tile__img c-tile__img--custoji lazy loaded" alt="Custoji" aria-label="Custoji image" data-ll-status="loaded" src="./Work_files/Profile.jpg">
   </div>
 </a>
 
